--- a/public/assets/css/reservasi/custom.css
+++ b/public/assets/css/reservasi/custom.css
@@ -26,7 +26,11 @@
     padding: 0;
     text-align: center;
 }
-#select2-slcpenumpang-results, #select2-slckelas-results {
+#select2-slcpenumpang-results, 
+#select2-slckelas-results, 
+#select2-slcbagasi-results,
+#select2-slcmenumakanan-results,
+#select2-slcpaymenmethod-results {
     margin-top: 30px !important;
 }
 .embed-responsive-13by9::before {
@@ -177,13 +181,16 @@
     text-align: center;
     letter-spacing: 0.5px;
     color: #FFFFFF;
-    padding: 0px 5px;
+    padding: 7px 5px;
     margin-top: 0;
+}
+.card-item-one-bottom-right button.btn-submit {
+    padding: 0px 5px;
 }
 /*kursi*/
 @media (min-width: 576px) {
     #kursibusModal .modal-sm {
-        max-width: 250px;
+        max-width: 300px;
     }
 }
 #kursibusModal .modal-body,
@@ -238,8 +245,8 @@
     letter-spacing: 0.5px;
     color: #000000;
     position: relative;
-    padding-left: 5px;
-    padding-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 #kursibusModal .modal-footer .info-status span span {
     width: 13px;
@@ -252,4 +259,465 @@
 }
 #kursibusModal .modal-footer .info-status span:nth-child(2) span {
     background: #DDDDDD;
+}
+#kursibusModal .modal-footer .info-status span:nth-child(3) span {
+    background: #025FB5;
+}
+
+/*isidata*/
+.passenger-form h5,
+.payment-form h5 {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #000000;
+}
+.passenger-form .btn-submit,
+.payment-form .btn-submit {
+    width: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+.payment-form input,
+.payment-form input:focus,
+.payment-form input:active,
+.payment-form input:hover,
+.payment-form select,
+.payment-form select:focus,
+.payment-form select:active,
+.payment-form select:hover,
+.payment-form select option,
+.passenger-form input,
+.passenger-form input:focus,
+.passenger-form input:active,
+.passenger-form input:hover,
+.passenger-form select,
+.passenger-form select:focus,
+.passenger-form select:active,
+.passenger-form select:hover,
+.passenger-form select option {
+    background: transparent !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #000000;
+    letter-spacing: 0.5px;
+    border: none;
+    border-bottom: 1px solid #1A1D24;
+    padding: 0 0.75rem 0.375rem 0;
+    height: auto;
+    box-shadow: none;
+}
+.passenger-form input::placeholder,
+.passenger-form select::placeholder {
+    background: transparent;
+    color: rgb(26, 29, 36, 0.7);
+    opacity: 1;
+}
+.passenger-form  label,
+.payment-form  label {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #AAAAAA;
+    margin-bottom: 0;
+}
+.passenger-form .check-passenger label {
+    color: #000000;
+}
+.passenger-form .check-passenger input {
+    margin-left: 5px;
+    margin-bottom: -4px;
+}
+.passenger-form .select2-container--default .select2-selection--single {
+    border: none;
+}
+.passenger-form .select2-container--default .select2-selection--single .select2-selection__rendered {
+    background: transparent !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px !important;
+    letter-spacing: 0.5px;
+    color: #000000 !important;
+    letter-spacing: 0.5px;
+    border: none;
+    border-bottom: 1px solid #1A1D24;
+    padding: 0 0.75rem 0.375rem 0;
+    box-shadow: none;
+    height: 24px;
+}
+.passenger-form .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-color: #000000 transparent transparent transparent !important;
+}
+.content-form-header,
+.content-form-body,
+.content-form-footer {
+    background-color: #FFFFFF;
+    padding: 2.5rem 2rem;
+    border-radius: 12px;
+    margin-bottom: 2rem;
+}
+.content-form-body .item-choose-seat label {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: right;
+    letter-spacing: 0.5px;
+    color: #D5031E;
+    display: block;
+}
+.content-form-body .item-choose-seat label span {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: right;
+    letter-spacing: 0.5px;
+    color: #AAAAAA;
+    display: block;
+}
+.content-form-body .item-choose-seat input {
+    font-weight: 800;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.5px;
+    text-align: right;
+    color: #1A1D24;
+    border: none;
+    padding: 0;
+    height: auto;
+    box-shadow: none;
+}
+.content-form-body .item-choose-seat .btn-submit {
+    margin-top: 0;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 17px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
+    width: 100%;
+}
+.content-form-footer {
+    background-color: #AAAAAA;
+}
+.content-form-footer h5 {
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+}
+.content-form-footer ul {
+    list-style-type: decimal;
+    padding-left: 0;
+    margin: auto;
+}
+.content-form-footer ul > li {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.5px;
+    color: #000000;
+}
+#kursibusModal.select-seat table tr td {
+    cursor: pointer;
+}
+#kursibusModal.select-seat table tr td.reserved {
+    cursor: no-drop;
+}
+#kursibusModal.select-seat table tr td.selected {
+    color: #FFFFFF;
+    background-color: #025FB5;
+}
+#kursibusModal.select-seat .modal-footer .info-status span {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+#kursibusModal.select-seat .modal-footer .info-status span:nth-child(1) {
+    margin-left: 0;
+}
+#kursibusModal.select-seat .modal-footer .info-status span:last-child {
+    margin-right: 0px;
+}
+#kursibusModal.select-seat .modal-footer .btn-close {
+    color: #FFFFFF;
+    background: #1A1D24;
+    border-radius: 7px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.5px;
+    width: 100%;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/*payment*/
+.payment-form p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #000000;
+}
+.payment-form input#promo {
+    border: 1px solid #ffffffb3;
+    color: #FFFFFF;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+}
+.payment-form input::placeholder,
+.payment-form select::placeholder {
+    background: transparent;
+    color: rgba(255, 255, 255, 0.7);
+    opacity: 1;
+}
+.payment-form .select2-container--default .select2-selection--single .select2-selection__arrow{
+    height: calc(1.5em + 0.75rem + 2px);
+    top: 6px;
+}
+.payment-form .select2-container--default .select2-selection--single {
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+}
+.payment-form .content-bill {
+    background-color: #FFFFFF;
+    border-radius: 12px;
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.payment-form .content-bill .item-bill {
+    margin-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.payment-form .content-bill .item-bill:last-child {
+    padding-top: 15px;
+    margin-bottom: 0;
+    border-top: 1px dashed #AAAAAA ;
+}
+.payment-form .content-bill .item-bill span {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #AAAAAA;
+    display: block;
+}
+.payment-form .content-bill .item-bill span:nth-child(1) {
+    padding-right: 10px;
+}
+.payment-form .content-bill .item-bill span:nth-child(2) {
+    padding-left: 10px;
+}
+.payment-form .content-bill .item-bill span:last-child {
+    font-weight: 600;
+    color: #000000;
+}
+.payment-form .content-bill .item-bill span.total {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    color: #D5031E;
+}
+.payment-form .select2-container--default .select2-selection--single .select2-selection__rendered {
+    padding-left: 0;
+}
+#otpModal .modal-content {
+    background-color: #E5E5E5;
+    border-radius: 24px;
+}
+#otpModal .modal-content .modal-body {
+    padding-bottom: 0;
+}
+#otpcodeform label {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #000000;
+    text-align: center;
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+#otpcodeform span,
+#otpcodeform a {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.5px;
+    color: #FFFFFF;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+}
+#otpcodeform span span#countdown {
+    display: inline;
+    cursor: pointer;
+}
+#otpcodeform input {
+    background-color: transparent !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #FFFFFF;
+    letter-spacing: 0.5px;
+    box-shadow: none;
+    text-align: center;
+    border: 1px solid #FFFFFF;
+    width: 200px;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 15px;
+}
+
+#otpcodeform input::placeholder {
+    background: transparent;
+    color: rgba(255, 255, 255, 0.8);
+    opacity: 1;
+}
+/*invoice*/
+#invoice {
+    margin-top: 66px;
+    position: relative;
+    display: block;
+}
+#invoice .content-body {
+    background-color: #FFFFFF;
+    padding: 40px 20px;
+    position: relative;
+    display: block;
+    border-radius: 20px;
+}
+#invoice h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #1A1D24;
+    text-align: center;
+    padding-top: 15px;
+    margin-bottom: 20px;
+}
+#invoice .content-body .countdown {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #D5031E;
+    padding: 5px 15px;
+    border-radius: 20px 0px;
+}
+#invoice .content-body .countdown span {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #1A1D24;
+}
+#invoice .content-body .items {
+    padding-bottom: 15px;
+}
+#invoice .content-body .items:nth-child(1) {
+    border-right: 2px solid #DDDDDD;
+}
+#invoice .content-body .items .item-body div,
+#invoice .content-body .items .item-footer div {
+    margin-bottom: 10px;
+}
+#invoice .content-body .items .item-body div span,
+#invoice .content-body .items .item-footer div span {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #AAAAAA;
+    display: block;
+}
+#invoice .content-body .items .item-body div span:nth-child(2) {
+    color: #1A1D24;
+}
+#invoice .content-body .items .item-footer {
+    margin-top: 15px;
+    padding-top: 15px;
+    border-top: 1px dashed #DDDDDD;
+}
+#invoice .content-body .items .item-footer div span:nth-child(2) {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    color: #1A1D24;
+}
+#invoice .content-footer {
+    margin-top: 20px;
+}
+#invoice .content-footer .btn-submit {
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+.w-accordion .w-accordion-menu {
+    border: none;
+}
+.w-accordion .w-accordion-menu {
+    padding: 5px 10px;
+    color: #777;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    color: #1A1D24;
+}
+.w-accordion .w-accordion-content {
+    padding: 10px;
+    border: 1px solid #ddd;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.5px;
+    color: #1A1D24;
+    display: none;
+}
+.w-accordion .w-accordion-content {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-image: initial;
+    border-bottom: 1px solid var(--N75,#E5E7E9);
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+@media (max-width: 576px) {
+    #invoice .content-footer .btn-submit {
+        width: 100;
+    }
 }
