--- a/public/assets/css/agen/custom.css
+++ b/public/assets/css/agen/custom.css
@@ -204,6 +204,11 @@ section {
     .position-2 ul.navtabs {
         width: calc(100vw - 30px);
     }
+    .position-1 {
+        margin-left: 0;
+        margin-left: 0;
+        width: 100%;
+    }
 }
 @media (max-width: 576px) {
     
