--- a/public/assets/css/home/custom.css
+++ b/public/assets/css/home/custom.css
@@ -64,7 +64,7 @@
 }
 .form-tiket {
     background: rgba(0, 0, 0, 0.5);
-    border-radius: 24px 24px 0px 0px;
+    border-radius: 24px;
     color: #FFFFFF;
     max-width: 327px;
     margin-left: auto;
