--- a/public/assets/css/profile/custom.css
+++ b/public/assets/css/profile/custom.css
@@ -97,13 +97,15 @@ section {
     color: #ffffff;
     border-radius: 4px;
     padding: 8.5px 8px;
+    border: none !important;
+    box-shadow: none !important;
 }
 .input-text-content input:hover,
 .input-text-content input:active,
 .input-text-content input:hover {
     border: none !important;
     box-shadow: none !important;
-    outline-style: none;
+    outline-style: none !important;
 }
 .input-phone-number-value {
     margin-left: 8px;
