--- a/public/assets/css/reservasi/custom.css
+++ b/public/assets/css/reservasi/custom.css
@@ -557,10 +557,10 @@
 #otpcodeform a {
     font-style: normal;
     font-weight: 600;
-    font-size: 10px;
-    line-height: 12px;
+    font-size: 12px;
+    line-height: 16px;
     letter-spacing: 0.5px;
-    color: #FFFFFF;
+    color: #1A1D24;
     display: block;
     text-align: center;
     text-decoration: none;
@@ -577,11 +577,11 @@
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.5px;
-    color: #FFFFFF;
+    color: #1A1D24;
     letter-spacing: 0.5px;
     box-shadow: none;
     text-align: center;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #555454;
     width: 200px;
     margin: 0 auto;
     display: block;
@@ -590,7 +590,7 @@
 
 #otpcodeform input::placeholder {
     background: transparent;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(78, 78, 78, 0.8);
     opacity: 1;
 }
 /*invoice*/
