--- a/public/assets/css/profile/custom.css
+++ b/public/assets/css/profile/custom.css
@@ -186,4 +186,9 @@ section {
         margin-left: 0;
         padding: 0;
     }
+
+    .vertical-text {
+        display: inline-block;
+        transform: rotate(90deg);
+      }
 }
